update new background and add footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taj</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -29,9 +30,70 @@
         </div>
     </header>
     <main>
-        <div class="aculinarylegacy">
-            ACULINARYLEGACY
+        <div class="main-sec">
+            <div class="taj-hotel">Taj Hotels</div>
+        </div>
+        <div class="space-1">
+            <div class="search" >
+                <div class="box"><i class="fa-solid fa-magnifying-glass" style="color:grey"></i></div>
+                <input type="text" placeholder="Click here to search for destination or hotel" class="searchbar">
+            </div>
         </div>
     </main>
+    <footer>
+        <div class="foot">
+            <img src="img2.png" alt="img" height="25" width="80">
+            <div class="section-1">
+                <div class="foot-1">
+                    <div class="latest">SUBSCRIBE FOR LATEST UPDATE</div>
+                    <div class="input-email">
+                        <input type="text" placeholder="Enter Your email addrass" class="input-place">
+                        <button class="input-button">SUBSCRIBE</button>
+                    </div>
+                    <div class="foot-1-1">
+                        <div class="contact latest">
+                            <div class="booking">FOR BOOKING CONTACTS</div>
+                        </div>
+                        <div class="num-email">
+                            <div class="num latest">1-800-111-825</div>
+                            <div class="email latest">reservetions@ihcitata.com</div>
+                        </div>
+                    </div>
+                    <div class="foot-1-1">
+                        <div class="contact latest">
+                            <div class="booking">CUSTOMER SUPPORT</div>
+                        </div>
+                        <div class="num-email">
+                            <div class="num latest">contacttaj@tajhotels.com</div>
+                            <div class="email latest">websitefeedback@tajhotels.com</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="foot-2">
+                    <ul class="link-list" style="font-size: 1rem;">Quick links
+                        <li><a>Hotels</a></li>
+                        <li><a>Dining</a></li>
+                        <li><a>Wellness</a></li>
+                        <li><a>Timeless Wedding</a></li>
+                        <li><a>Event Venues</a></li>
+                        <li><a>Taj Magazine</a></li>
+                        <li><a>Sitemap</a></li>
+                        <li><a>HSBC taj credit</a></li>
+                        <li><a>Card</a></li>
+                        <li><a>About Taj</a></li>
+                        <li><a>Holidays</a></li>
+                        <li><a>Offers</a></li>
+                        <li><a>Gifting</a></li>
+                        <li><a>Neupass</a></li>
+                        <li><a>Epicure</a></li>
+                        <li><a>Taj Blog</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="section-2">
+                
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
